# DojoPool

./: -files _ xargs ls -lh _ grep -v ^- _ sort -k5 -hr _ head -20  .babelrc  .clang-tidy  .coverage  .dockerignore  .editorconfig  .env  .env.backup-utf16  .env.development  .env.example  .env.final  .env.full  .env.local  .env.local.txt  .env.merged  .env.minimal  .env.production  .env.production.example  .env.production.template  .env.staging  .env.temp  .env.template  .env.test  .eslintignore  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .eslintrc.security.js  .firebaserc  .flake8  .flaskenv  .gitattributes  .gitignore  .gitmodules  .iwyu  .npmrc  .output.txt  .output2.txt  .percy.yml  .pre-commit-config.yaml  (+569 more)
src/: .coverage  CMakeLists.txt  README.md  [FB]firebase.js  [SRV]wsgi.py  [TEST]setupTests.ts  [UI]App.js  [UI]index.css  [UI]theme.js  __init__.py  app.py  cleanup_and_configure_git.py  combine_workspaces.py  configure_repository.py  exceptions.py  extensions.py  firebase.js  full_traceback.txt  index.css  index.ts  jest-types.d.ts  listworkspaces.py  main.py  models.py  performance_monitor.ts  routes.py  server.py  setup.py  setupTests.ts  setup_git.py  setup_git_auth.py  startup_error.txt  startup_error2.txt  startup_error3.txt  test-jest-types.ts  theme.js  theme.ts  tsconfig.test.json
src/__tests__/: Home.test.tsx  basic.test.ts  sample.test.ts  setup.ts  test-utils.tsx
src/addon/: CMakeLists.txt  binding.gyp  index.js  package.json.in  physics_addon.cpp
src/ai/: __init__.py  analysis.py  difficulty.py  dynamic_narrative.py
src/api/: __init__.py  api_handler.py  tournaments.ts
src/auth/: __init__.py  blueprint.py  routes.py
src/backend/: Dojo_Pool.py  Dojo_Pool_cleaned.py  database.py  index-simple.ts  index.ts  listworkspaces.py  setup.py  simple-index.ts
src/blueprints/: auth.py  google_auth.py  multiplayer.py  umpire.py
src/components/: ActivityFeed.tsx  AdvancedPoolEnvironment.tsx  AnalyticsDashboard.tsx  AppBar.tsx  Button.test.tsx  Container.tsx  DataGrid.tsx  DojoMarker.tsx  DojoProfilePanel.tsx  EditProfileModal.tsx  EnhancedPoolPhysicsPrototype.tsx  ErrorBoundary.tsx  FirebaseTest.tsx  OptimizedImage.tsx  PerformanceDashboard.tsx  PerformanceMonitorDashboard.tsx  PoolPhysicsPrototype.tsx  QRAlertsDashboard.tsx  QRScanner.css  QRScanner.tsx  QRStatsDashboard.tsx  RealTimeNotifications.tsx  RefinedAdvancedPoolEnvironment.tsx  ShotFeedback.tsx  ThreePrototype.tsx  TournamentBracket.tsx  [ERR]ErrorBoundary.js  [UI]Dashboard.js
src/config/: __init__.py  analytics.ts  backup.ts  base.py  cdn.js  cdn.ts  constants.ts  data.ts  database.ts  deployment.ts  development.py  environment.backend.ts  environment.js  environment.ts  firebase.ts  index.ts  monitoring.ts  performance.ts  production.py  security.ts  ssl.ts  testing.py
src/constants/: __init__.py  index.ts
src/contexts/: ChallengeContext.tsx  KeyboardNavigationContext.tsx
src/core/: CMakeLists.txt  __init__.py  api_docs.py  cache.py  config.py  database.py  exceptions.py  extensions.py  factory.py  logging.cpp  logging.hpp  middleware.py  mixins.py  models.py  monitoring.py  notifications.py  routes.py  security.py  tournament.py  types.hpp  validation.py  websocket.py
src/dojopool/: [APP]app.py  [CONFIG]config.py  [CONFIG]constants.ts  [DB]database.py  [ERR]exceptions.py  [EXT]extensions.py  [ROUTE]routes.py  [SCHED]scheduler.py  [TEST]test_websocket.py  __init__.py  app.py  celery.py  celery_app.py  celeryconfig.py  config.py  exceptions.py  extensions.py  monitor_basic.py  monitor_basic.py.new  routes.py  server.py  tasks.py  test_app.py  test_basic.py  test_imports.py  urls.py  wsgi.py
src/firebase/: admin.ts  auth.ts  config.ts  email.ts  firebase.ts  firestore.ts  index.ts  storage.ts  types.ts
src/frame-processor/: Cargo.toml
src/frontend/: .env  App-simple.tsx  App.jsx  App.tsx  index.css  index.jsx  main-simple.tsx  main.tsx  shims.d.ts  three-extensions.ts
src/game/: __init__.py  routes.py
src/graphql/: community-showcase.graphql
src/hooks/: [TEST]useABTest.ts  [UTIL]useLocation.ts  index.ts  useAICommentary.ts  useAICommentaryHighlights.ts  useAdvancedAIMatchCommentaryHighlights.ts  useAdvancedAIRefereeRuleEnforcement.ts  useAdvancedAnalytics-Meex.ts  useAdvancedAnalytics.ts  useAdvancedPlayerAnalytics.ts  useAdvancedSocialCommunity.ts  useAdvancedTournament.ts  useAdvancedVenueManagement.ts  useAuth.ts  useCameraFeed.ts  useClanSystem.ts  useDojoCoinEconomy.ts  useEnhancedBlockchain.ts  useEnhancedSocial.ts  useEnhancedTournament.ts  useEnhancedVenueManagement.ts  useFirestore.ts  useFriendship.ts  useGameFlow.ts  useGameSocket.ts  useGameState.ts  useGestures.ts  useInterval.ts  useKeyboardNavigation.ts  useLiveCommentary.ts  useNFTWallet.ts  useNarrativeSystem.ts  useNavigable.ts  useNotifications.ts  usePassiveIncome.ts  useProfile.ts  useSocialFeatures.ts  useSponsorshipIntegration.ts  useStorage.ts  useTerritoryGameplay.ts  (+5 more)
src/instance/: dojopool.db  dojopool_dev.db
src/mail_service/: __init__.py  service.py
src/main/: __init__.py  routes.py
src/mcp/: MCPTool.js  MCPTool.test.js
src/middleware/: auth.ts  csrfProtection.ts  httpsRedirect.ts  rateLimit.ts  rateLimiter.ts  security.ts  securityHeaders.ts  session.ts  validation.ts  withAuth.ts
tests/: CMakeLists.txt  base.py  conftest.py  factories.py  pytest.ini  requirements-test.txt  setup.js  setup.ts  setupTests.ts  test_api_handler.py  test_app.py  test_ball_tracker.py  test_basic.py  test_db_service.py  test_flask.py  test_game_core.py  test_global_ranking.py  test_goose.py  test_hardware_wallet.py  test_image_compression.py  test_match.py  test_metrics_monitor.py  test_monitoring.py  test_monitoring_routes.py  test_narrative_generator.py  test_performance_monitor.py  test_qr.py  test_ranking_system.py  test_rate_limiter.py  test_realtime_service.py  test_room_broadcast.py  test_room_init.py  test_room_notifications.py  test_spectator_system.py  test_tournament_routes.py  test_tournament_service.py  test_venue_routes.py  test_vision_system.py  test_wallet_api.py  test_wallet_service.py  (+9 more)
(+9515 files in other folders)
