[project]
name = "repl-nix-dojopoolenhancer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "oauthlib>=3.2.2",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "flask-socketio>=5.4.1",
    "eventlet",
    "selenium>=4.25.0",
    "numpy>=1.22.0",
    "opencv-python-headless>=4.7.0",
    "opencv-python",
    "scikit-learn",
    "pillow>=11.0.0",
    "python-socketio",
    "pyopenssl",
    "werkzeug>=3.0.6",
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/venv/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100
skip = ["venv", ".venv", "env"]
skip_glob = ["**/migrations/*.py"]
known_first_party = ["src"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "tests/*",
    "venv/*",
    "**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.uv.sources]
dojopool = { path = "src/dojopool", editable = true }

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-flask",
    "fakeredis[lua]",
]
