[project]
name = "repl-nix-dojopoolenhancer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "oauthlib>=3.2.2",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "flask-socketio>=5.4.1",
    "eventlet",
    "selenium>=4.25.0",
    "numpy>=1.22.0",
    "opencv-python-headless>=4.7.0",
    "opencv-python",
    "scikit-learn",
    "pillow>=11.0.0",
    "python-socketio",
    "pyopenssl",
    "werkzeug>=3.0.6",
]
