[project]
name = "repl-nix-dojopoolenhancer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "oauthlib>=3.2.2",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "flask-socketio>=5.4.1",
    "eventlet>=0.36.1",
    "selenium>=4.25.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.10.0",
    "opencv-python>=4.10.0",
    "scikit-learn>=1.5.0",
    "pillow>=11.0.0",
    "python-socketio>=5.11.0",
    "pyopenssl>=24.0.0",
    "werkzeug>=3.1.0",
]
