[metadata]
name = dojopool
version = 0.1.0
description = DojoPool - AI-Enhanced Pool Gaming Platform
author = DojoPool Team
author_email = team@dojopool.com
url = https://github.com/SgtClickClack/DojoPool

[options]
python_requires = >=3.12
packages = find:
package_dir =
    = src
install_requires =
    flask>=3.1.0
    flask-sqlalchemy>=3.1.0
    flask-migrate>=4.1.0
    flask-login>=0.6.3
    flask-wtf>=1.2.2
    flask-limiter>=3.10.1
    flask-talisman>=1.1.0
    flask-cors>=4.0.0
    sqlalchemy>=2.0.38
    alembic>=1.14.1
    redis>=5.0.1
    pyjwt>=2.10.1
    cryptography>=44.0.0
    marshmallow>=3.26.1
    requests>=2.32.3
    python-dotenv>=1.0.1
    gunicorn>=21.2.0
    sentry-sdk>=1.40.6
    prometheus-client>=0.19.0

[options.packages.find]
where = src

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist,*.egg-info
per-file-ignores =
    __init__.py:F401,F403
    tests/*:S101,S106
max-complexity = 10

[mypy]
python_version = 3.12
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_optional = True
plugins =
    mypy_django_plugin.main,
    sqlalchemy.ext.mypy.plugin

[mypy.plugins.django.*]
init_typed = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test
python_functions = test_*
addopts =
    --verbose
    --strict-markers
    --cov=src
    --cov-report=term-missing
    --cov-report=xml
    --cov-report=html
    --no-cov-on-fail
    --randomly-seed=1234
    --randomly-dont-reset-seed
markers =
    slow: marks tests as slow
    integration: marks tests as integration tests
    security: marks tests as security tests

[coverage:run]
branch = True
source = src
omit =
    tests/*
    */__init__.py
    */migrations/*
    */settings/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError
fail_under = 80

[bandit]
targets = src
exclude = tests,setup.py
tests = B101,B102,B103,B104,B105,B106,B107,B108,B110,B112,B201,B301,B302,B303,B304,B305,B306,B307,B308,B309,B310,B311,B312,B313,B314,B315,B316,B317,B318,B319,B320,B321,B322,B323,B324,B325
skips = B101

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 100
skip = .git,__pycache__,build,dist,*.egg-info

[pylint]
max-line-length = 100
disable = C0111,R0903,C0103
ignore = migrations
ignore-patterns = test_.*?py
good-names = i,j,k,ex,Run,_,fp,id
output-format = colorized

[pylint.messages_control]
disable = C0111,R0903,C0103,W0511

[security]
# Security-specific settings
secret-key = your-secret-key-here
allowed-hosts = localhost,127.0.0.1
csrf-trusted-origins = https://*.dojopool.com
secure-ssl-redirect = true
session-cookie-secure = true
csrf-cookie-secure = true
secure-hsts-seconds = 31536000
secure-hsts-include-subdomains = true
secure-content-type-nosniff = true
secure-browser-xss-filter = true
secure-referrer-policy = same-origin 