[package]
name = "frame-processor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["ImageData", "CanvasRenderingContext2d"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1 